# web-management-job-trello

./: .eslintrc.cjs  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.js
backend/: .env.example  .envrc  .gitignore  .pylintrc  Dockerfile.backend  Note fix bug.txt  pyproject.toml  requirements.txt  test.py
backend/src/: main.py  server.py
backend/src/common/decorator/: auth_decorator.py
backend/src/config/: environment.py  mongodb.py
backend/src/config/mongo_config/: config.py  mongo_config.py
backend/src/controllers/: auth_controller.py  board_controller.py  card_controller.py  column_controller.py  group_message_controller.py  message_controller.py  user_controller.py
backend/src/middlewares/: auth_middleware.py
backend/src/migrations/: migrations.txt
backend/src/models/: board_model.py  card_model.py  column_model.py  group_message_model.py  message_model.py  models.txt  user_model.py
backend/src/providers/: providers.txt  websocket_provider.py
backend/src/routes/: auth_routes.py  board_routes.py  card_routes.py  column_routes.py  group_message_routes.py  message_routes.py  user_routes.py
backend/src/services/: auth_service.py  board_service.py  card_service.py  column_service.py  group_message_service.py  message_service.py  user_service.py
backend/src/sockets/: sockets.txt  websocket_manager.py
backend/src/utils/: constants.py  formatters.py  jwt_util.py  utils.txt
backend/src/validations/: board_validation.py  card_validation.py  column_validation.py  message_validation.py  user_validation.py
(+130 files in other folders)
