[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"

dependencies = [
    "fastapi[standard]>=0.115.6",
    "motor>=3.6.0",
    "mongoengine>=0.29.1",
    "pydantic>=2.10.5",
    "pyjwt>=2.10.1",
    "pyotp>=2.9.0",
    "python-dotenv>=1.0.1",
    "starlette>=0.41.3",
    "uvicorn>=0.32.0",
    "email_validator==2.2.0",
    "Faker==33.1.0",
    "sqlmodel==0.0.22",
    "pymongo==4.9.2",
    "cryptography==44.0.0",
    "passlib>=1.7.4",
]

